--- a/Project/package.json
+++ b/Project/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pwa-complete-guide",
+  "name": "pwa-testing",
   "version": "1.0.0",
-  "description": "A complete guide to PWAs. Building a simple Instagram clone.",
+  "description": "PWA Testing",
   "main": "index.js",
   "scripts": {
     "start": "http-server -c-1"
@@ -10,13 +10,6 @@
     "pwa",
     "progressive",
     "web",
-    "app",
-    "complete",
-    "tutorial"
-  ],
-  "author": "Maximilian Schwarzmüller",
-  "license": "ISC",
-  "devDependencies": {
-    "http-server": "^0.9.0"
-  }
+    "app"
+  ]
 }
