--- a/Project/package.json
+++ b/Project/package.json
@@ -4,7 +4,7 @@
   "description": "PWA Testing",
   "main": "index.js",
   "scripts": {
-    "start": "http-server -c-1"
+    "start": "http-server -c-1 -p 8081"
   },
   "keywords": [
     "pwa",
