--- a/Project/public/manifest.json
+++ b/Project/public/manifest.json
@@ -1,3 +1,50 @@
 {
-    
+    "name": "Progressive Web-App",
+    "short_name": "PWA",
+    "start_url": "/index.html",
+    "sope": ".",
+    "display": "standalone",
+    "background-color": "#fff",
+    "theme-color": "#32f5A6",
+    "description": "dfasadsf",
+    "dir": "ltr",
+    "lan": "en-US",
+    "orientation": "portrait-primary",
+    "icons": [
+        {
+            "src": "/src/images/app-icon-48x48",
+            "type": "image/png",
+            "size": "48x48"
+        }, 
+        {
+            "src": "/src/images/app-icon-96x96",
+            "type": "image/png",
+            "size": "96x96"
+        }, 
+        {
+            "src": "/src/images/app-icon-144x144",
+            "type": "image/png",
+            "size": "144x144"
+        }, 
+        {
+            "src": "/src/images/app-icon-192x192",
+            "type": "image/png",
+            "size": "192x192"
+        }, 
+        {
+            "src": "/src/images/app-icon-256x256",
+            "type": "image/png",
+            "size": "256x256"
+        }, 
+        {
+            "src": "/src/images/app-icon-384x384",
+            "type": "image/png",
+            "size": "384x384"
+        }, 
+        {
+            "src": "/src/images/app-icon-512x512",
+            "type": "image/png",
+            "size": "512x512"
+        }
+    ]
 }
