--- a/Project/public/manifest.json
+++ b/Project/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Progressive Web-App",
+    "name": "Social Media Progressive Web-App",
     "short_name": "PWA",
     "start_url": "/index.html",
     "sope": ".",
@@ -45,6 +45,13 @@
             "src": "/src/images/app-icon-512x512",
             "type": "image/png",
             "size": "512x512"
+        }
+    ],
+    "related_appliations": [
+        {
+            "platform": "/",
+            "url": "/",
+            "id": "app1"
         }
     ]
 }
