--- a/Project/public/manifest.json
+++ b/Project/public/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "PWA",
     "start_url": "/index.html",
     "sope": ".",
-    "display": "standalone",
+    "display": "fullscreen",
     "background-color": "#fff",
     "theme-color": "#32f5A6",
     "description": "dfasadsf",
