--- a/Project/public/manifest.json
+++ b/Project/public/manifest.json
@@ -2,56 +2,57 @@
     "name": "Social Media Progressive Web-App",
     "short_name": "PWA",
     "start_url": "/index.html",
-    "sope": ".",
+    "scope": ".",
     "display": "standalone",
-    "background-color": "#fff",
-    "theme-color": "#32f5A6",
-    "description": "dfasadsf",
+    "background_color": "#ffffff",
+    "theme_color": "#32f5A6",
+    "description": "A social media PWA to share your moments.",
     "dir": "ltr",
-    "lan": "en-US",
+    "lang": "en-US",
     "orientation": "portrait-primary",
     "icons": [
-        {
-            "src": "/src/images/app-icon-48x48",
-            "type": "image/png",
-            "size": "48x48"
-        }, 
-        {
-            "src": "/src/images/app-icon-96x96",
-            "type": "image/png",
-            "size": "96x96"
-        }, 
-        {
-            "src": "/src/images/app-icon-144x144",
-            "type": "image/png",
-            "size": "144x144"
-        }, 
-        {
-            "src": "/src/images/app-icon-192x192",
-            "type": "image/png",
-            "size": "192x192"
-        }, 
-        {
-            "src": "/src/images/app-icon-256x256",
-            "type": "image/png",
-            "size": "256x256"
-        }, 
-        {
-            "src": "/src/images/app-icon-384x384",
-            "type": "image/png",
-            "size": "384x384"
-        }, 
-        {
-            "src": "/src/images/app-icon-512x512",
-            "type": "image/png",
-            "size": "512x512"
-        }
+      {
+        "src": "/src/images/icons/app-icon-48x48.png",
+        "type": "image/png",
+        "sizes": "48x48"
+      },
+      {
+        "src": "/src/images/icons/app-icon-96x96.png",
+        "type": "image/png",
+        "sizes": "96x96"
+      },
+      {
+        "src": "/src/images/icons/app-icon-144x144.png",
+        "type": "image/png",
+        "sizes": "144x144"
+      },
+      {
+        "src": "/src/images/icons/app-icon-192x192.png",
+        "type": "image/png",
+        "sizes": "192x192"
+      },
+      {
+        "src": "/src/images/icons/app-icon-256x256.png",
+        "type": "image/png",
+        "sizes": "256x256"
+      },
+      {
+        "src": "/src/images/icons/app-icon-384x384.png",
+        "type": "image/png",
+        "sizes": "384x384"
+      },
+      {
+        "src": "/src/images/icons/app-icon-512x512.png",
+        "type": "image/png",
+        "sizes": "512x512"
+      }
     ],
-    "related_appliations": [
-        {
-            "platform": "/",
-            "url": "/",
-            "id": "app1"
-        }
+    "related_applications": [
+      {
+        "platform": "web",
+        "url": "/",
+        "id": "app1"
+      }
     ]
-}
+  }
+  
